// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@tschannel/transformer should be able to detect the module alias 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const channel = new Channel();
channel.rclass();
{ }
"
`;

exports[`@tschannel/transformer should be able to exclude methods calling that has more than 2 arguments 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const channel = new Channel();
channel.rclass('RemoteAPI1', class {
    method() { }
});
{ }
"
`;

exports[`@tschannel/transformer should be able to exclude methods without type arguments 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const core_1 = require(\\"@tschannel/core\\");
const channel = new core_1.Channel();
channel.rclass('RemoteAPI', class RemoteAPI {
    method() { }
});
"
`;

exports[`@tschannel/transformer should be able to reference the class 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const core_1 = require(\\"@tschannel/core\\");
const channel = new core_1.Channel();
channel.rclass(\\"RemoteAPI\\", RemoteAPI);
class RemoteAPI {
    method() { }
}
"
`;

exports[`@tschannel/transformer should run normally with the transformer 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
exports.x = void 0;
const core_1 = require(\\"@tschannel/core\\");
exports.x = 'string';
console.info(core_1.Channel);
"
`;

exports[`@tschannel/transformer should transform the interface parameter correctly 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const core_1 = require(\\"@tschannel/core\\");
const channel = new core_1.Channel();
channel.rclass(\\"RemoteAPI\\", class RemoteAPIImpl_1 {
    method() { }
});
{ }
"
`;
